move to dark theme

--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <title>Document</title>
     
     <style>
+        body { color:#ddd; background: #333338; font-family: sans-serif; letter-spacing: 0.2px; font-weight: 100; font-size: 12px; }
         .world div { word-break: break-all; }
-        .cell { border:1px solid red; display: inline-block; padding:5px; border-radius: 15px; margin:1px; }
-        .cell.small { background: rgba(100,255,100,0.3); }
-        .cell.big { background: rgba(255,100,100,0.3); }
+        .cell { border:1px solid #922; display: inline-block; padding:5px; border-radius: 15px; margin:1px; }
+        .cell.small { background: rgba(50,100,50,0.5); }
+        .cell.big { background: rgba(100,50,50,0.5); }
     </style>
     
     <script src="env.js"></script>
